# EarthGrid

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  s2testing.cc
src/builder/: s2boolean_operation.cc  s2builder.cc  s2builder_graph.cc  s2builderutil_closed_set_normalizer.cc  s2builderutil_find_polygon_degeneracies.cc  s2builderutil_s2point_vector_layer.cc  s2builderutil_s2polygon_layer.cc  s2builderutil_s2polyline_layer.cc  s2builderutil_s2polyline_vector_layer.cc  s2builderutil_snap_functions.cc  s2builderutil_testing.cc
src/cellid/: EGCellID.cpp
src/core/: EG1DAngle.cpp  EG1DChordAngle.cpp  EG1DInterval.cpp  EGCoords.cc  EGLatlng.cpp  EGPoint.cpp  EGPointUtil.cpp  id_set_lexicon.cc  r2rect.cpp  s2cell_id.cc  s2centroids.cc  s2coords.cc  s2debug.cc  s2earth.cc  s2edge_clipping.cc  s2edge_crosser.cc  s2edge_crossings.cc  s2edge_distances.cc  s2edge_tessellator.cc  s2error.cc  s2loop_measures.cc  s2measures.cc  s2metrics.cc  s2padded_cell.cc  s2point_compression.cc  s2pointutil.cc  s2polyline_measures.cc  s2polyline_simplifier.cc  s2predicates.cc  s2projections.cc  s2testing.cc  s2text_format.cc  s2wedge_relations.cc
src/encode/: encoded_s2cell_id_vector.cc  encoded_s2point_vector.cc  encoded_s2shape_index.cc  encoded_string_vector.cc  s2text_format.cc
src/index/: encoded_s2shape_index.cc  mutable_s2shape_index.cc  s2cell_index.cc  s2region_term_indexer.cc  s2shape_index.cc  s2shape_index_measures.cc
src/object/: EGCell.cpp  EGCellUnion.cpp  EGLatLongRect.cpp  EGLoop.cpp  EGPoint.cpp  EGPolygon.cpp  EGPolyline.cpp  EGRegion.cpp  EGRegion_Intersection.cpp  EGRegion_Union.cpp  EGSphereCap.cpp  s2cap.cc  s2cell.cc  s2cell_union.cc  s2latlng_rect.cc  s2latlng_rect_bounder.cc  s2loop.cc  s2point_region.cc  s2polygon.cc  s2polyline.cc  s2polyline_alignment.cc  s2r2rect.cc  s2region.cc  (+4 more)
(+161 files in other folders)
